# triance-admin-frontend/src/pages/Admin/PasswordPolicy/passwordPolicyTypes.ts
@@ -1,14 +1,12 @@
 export interface IPasswordPolicy {
-    id: number;
-    password_expiry: number;
-    password_history: number;
-    minimum_password_length: number;
-    complexity: number;
-    alphabetical: number;
-    numeric: number;
-    special_characters: number;
-    allowed_special_characters: string;
-    maximum_invalid_attempts: number;
-    date_created: string | undefined;
-    date_updated: string | undefined;
+  id: number;
+  passwordExpiry: number;
+  passwordHistory: number;
+  complexity: number;
+  passwordLength: number;
+  allowedSpecialCharacters: string;
+  invalidAttempts: number;
+  alphabetical: boolean;
+  numeric: boolean;
+  specialCharacters: boolean;
 }
